# ADI

./: .gitignore  README.md  pyproject.toml
FSE26-Artifact/: README.md
skills/adi-python-debugger/: SKILL.md
src/ADI/: __init__.py  __main__.py  cli.py  executor.py  frame_id.py  parser.py  server.py  session.py
src/ADI/dbgtool/: tracer.py  utils.py
